--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography">
+<body>
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
+<script>
+  window.addEventListener("load", function randomize(){
+    var r;
+    var list = document.getElementsByClassName("listing-item")
+    for(var i=0;i<36;i++){
+        r = Math.floor(Math.random()*200);
+        list[i].style.margin = r + "px";
+    }
+});
+</script>
 </html>
