--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Attestation</title>
@@ -9,23 +10,47 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body style="display: flex; justify-content: center; align-items: center;">
+
+<body>
   <app-root></app-root>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 </body>
 <script>
-  window.addEventListener("load", function randomize(){
+  window.addEventListener("load", function randomize() {
     var r;
     var list = document.getElementsByClassName("listing-item")
-    for(var i=0;i<36;i++){
-        r = Math.floor(Math.random()*200);
-        list[i].style.margin = r + "px";
+    for (var i = 0; i < 36; i++) {
+      r = Math.floor(Math.random() * 200);
+      list[i].style.margin = r + "px";
     }
+  });
+
+  const inputs = ["input1", "input2", "input3", "input4"];
+
+inputs.map((id) => {
+  const input = document.getElementById(id);
+  addListener(input);
 });
+
+function focusNextInput(event, index) {
+  const inputLength = event.target.value.length;
+  const maxLength = parseInt(event.target.getAttribute('maxlength'));
+
+  if (inputLength === maxLength) {
+    const inputs = document.getElementsByClassName('otp-input');
+    if (index < inputs.length) {
+      inputs[index].focus();
+    }
+  }
+}
 </script>
+
 </html>
